@@ -43,8 +43,7 @@ static void mob_log(char_data *mob, const char *format, ...)
 }
 
 /* Macro to determine if a mob is permitted to use these commands. */
-#define MOB_OR_IMPL(ch) \
-  (IS_NPC(ch) && (!(ch)->desc || GET_LEVEL((ch)->desc->original)>=LVL_IMPL))
+#define MOB_OR_IMPL(ch) (GET_LEVEL(ch) > 0)
 
 /* mob commands */
 /* prints the argument to all the rooms aroud the mobile */
@@ -279,6 +278,7 @@ ACMD(do_mecho)
     skip_spaces(&p);
 
     sub_write(p, ch, TRUE, TO_ROOM);
+    sub_write(p, ch, TRUE, TO_CHAR);
 }
 
 ACMD(do_mzoneecho)
